// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Drawer Snapshot Tests > Drawer.Root > should render basic drawer with header and content 1`] = `
<div
>

  <div
    id="mrc-drawer"
    class="relative"
  >

    <div
      data-scope="dialog"
      data-part="positioner"
      dir="ltr"
      id="dialog::r0::positioner"
    >

      <div
        data-scope="dialog"
        data-part="content"
        dir="ltr"
        role="dialog"
        id="dialog::r0::content"
        tabindex="-1"
        data-state="open"
        aria-modal="true"
        aria-labelledby=""
        aria-describedby=""
        class="_drawer-positioner__content--right_HASH_85 _drawer-positioner__content_HASH_2 max-w-full overflow-hidden p-0 sm:w-[var(--mrc-drawer-width)] w-full"
        data-ods="drawer-content"
        data-testid="drawer"
      >

        <div
          data-ods="drawer-body"
        >

          <div
            class="flex flex-col h-screen justify-between overflow-hidden"
          >

            <button
              class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 absolute right-4 top-7"
              data-ods="button"
              data-testid="drawer-dismiss-button"
              aria-label="Fermer"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >

                <header
                  class="flex items-center min-h-[var(--mrc-drawer-header-height)] pl-6 pr-16"
                >

                  <div
                    class="flex items-center py-6 space-x-2 w-full"
                  >

                    <h2
                      class="_text--heading-2_HASH_19"
                      data-ods="text"
                    >Basic Drawer
                    </h2
                    >
                    </div
                    >
                    </header
                    >

                      <section
                        class="flex-1 outline-none overflow-y-auto px-6"
                      >

                        <h3
                          class="_text--heading-3_HASH_25"
                          data-ods="text"
                        >Basic Drawer
                        </h3
                        >

                          <p
                          >This is the drawer content
                          </p
                          >
                          </section
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >

                            <button
                              data-testid="drawer-backdrop"
                              type="button"
                              aria-label="Fermer"
                              tabindex="0"
                              class="bg-[var(--ods-color-information-500)] fixed inset-0 mrc-drawer-backdrop-fade-in z-40"
                            >
                            </button
                            >
                            </div
                            >
                            </div
                            >
`;

exports[`Drawer Snapshot Tests > Drawer.Root > should render closed drawer 1`] = `
<div
>

  <div
    id="mrc-drawer"
    class="relative"
  >

    <div
      data-scope="dialog"
      data-part="positioner"
      dir="ltr"
      id="dialog::r2::positioner"
      style="pointer-events: none;"
    >

      <div
        data-scope="dialog"
        data-part="content"
        dir="ltr"
        role="dialog"
        hidden=""
        id="dialog::r2::content"
        tabindex="-1"
        data-state="closed"
        aria-modal="true"
        aria-labelledby=""
        aria-describedby=""
        class="_drawer-positioner__content--right_HASH_85 _drawer-positioner__content_HASH_2 max-w-full overflow-hidden p-0 sm:w-[var(--mrc-drawer-width)] w-full"
        data-ods="drawer-content"
        data-testid="drawer"
      >

        <div
          data-ods="drawer-body"
        >

          <div
            class="flex flex-col h-screen justify-between overflow-hidden"
          >

            <button
              class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 absolute right-4 top-7"
              data-ods="button"
              data-testid="drawer-dismiss-button"
              aria-label="Fermer"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >

                <header
                  class="flex items-center min-h-[var(--mrc-drawer-header-height)] pl-6 pr-16"
                >

                  <div
                    class="flex items-center py-6 space-x-2 w-full"
                  >

                    <h2
                      class="_text--heading-2_HASH_19"
                      data-ods="text"
                    >Closed Drawer
                    </h2
                    >
                    </div
                    >
                    </header
                    >

                      <section
                        class="flex-1 outline-none overflow-y-auto px-6"
                      >

                        <h3
                          class="_text--heading-3_HASH_25"
                          data-ods="text"
                        >Closed Drawer
                        </h3
                        >

                          <p
                          >This drawer is closed
                          </p
                          >
                          </section
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >
`;

exports[`Drawer Snapshot Tests > Drawer.Root > should render drawer with complex content 1`] = `
<div
>

  <div
    id="mrc-drawer"
    class="relative"
  >

    <div
      data-scope="dialog"
      data-part="positioner"
      dir="ltr"
      id="dialog::r5::positioner"
    >

      <div
        data-scope="dialog"
        data-part="content"
        dir="ltr"
        role="dialog"
        id="dialog::r5::content"
        tabindex="-1"
        data-state="open"
        aria-modal="true"
        aria-labelledby=""
        aria-describedby=""
        class="_drawer-positioner__content--right_HASH_85 _drawer-positioner__content_HASH_2 max-w-full overflow-hidden p-0 sm:w-[var(--mrc-drawer-width)] w-full"
        data-ods="drawer-content"
        data-testid="drawer"
      >

        <div
          data-ods="drawer-body"
        >

          <div
            class="flex flex-col h-screen justify-between overflow-hidden"
          >

            <button
              class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 absolute right-4 top-7"
              data-ods="button"
              data-testid="drawer-dismiss-button"
              aria-label="Fermer"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >

                <header
                  class="flex items-center min-h-[var(--mrc-drawer-header-height)] pl-6 pr-16"
                >

                  <div
                    class="flex items-center py-6 space-x-2 w-full"
                  >

                    <h2
                      class="_text--heading-2_HASH_19"
                      data-ods="text"
                    >Complex Content Drawer
                    </h2
                    >
                    </div
                    >
                    </header
                    >

                      <section
                        class="flex-1 outline-none overflow-y-auto px-6"
                      >

                        <h3
                          class="_text--heading-3_HASH_25"
                          data-ods="text"
                        >Complex Content Drawer
                        </h3
                        >

                          <p
                          >Some text content
                          </p
                          >

                            <ul
                            >

                              <li
                              >Item 1
                              </li
                              >

                                <li
                                >Item 2
                                </li
                                >

                                  <li
                                  >Item 3
                                  </li
                                  >
                                  </ul
                                  >
                                  </section
                                  >

                                    <footer
                                      class="p-6 space-x-2"
                                    >

                                      <button
                                        class="_button--default_HASH_49 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2"
                                        data-ods="button"
                                        data-testid="manager-button"
                                        type="button"
                                      >Save
                                      </button
                                      >
                                      </footer
                                      >
                                      </div
                                      >
                                      </div
                                      >
                                      </div
                                      >
                                      </div
                                      >

                                        <button
                                          data-testid="drawer-backdrop"
                                          type="button"
                                          aria-label="Fermer"
                                          tabindex="0"
                                          class="bg-[var(--ods-color-information-500)] fixed inset-0 mrc-drawer-backdrop-fade-in z-40"
                                        >
                                        </button
                                        >
                                        </div
                                        >
                                        </div
                                        >
`;

exports[`Drawer Snapshot Tests > Drawer.Root > should render drawer with header, content and footer 1`] = `
<div
>

  <div
    id="mrc-drawer"
    class="relative"
  >

    <div
      data-scope="dialog"
      data-part="positioner"
      dir="ltr"
      id="dialog::r1::positioner"
    >

      <div
        data-scope="dialog"
        data-part="content"
        dir="ltr"
        role="dialog"
        id="dialog::r1::content"
        tabindex="-1"
        data-state="open"
        aria-modal="true"
        aria-labelledby=""
        aria-describedby=""
        class="_drawer-positioner__content--right_HASH_85 _drawer-positioner__content_HASH_2 max-w-full overflow-hidden p-0 sm:w-[var(--mrc-drawer-width)] w-full"
        data-ods="drawer-content"
        data-testid="drawer"
      >

        <div
          data-ods="drawer-body"
        >

          <div
            class="flex flex-col h-screen justify-between overflow-hidden"
          >

            <button
              class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 absolute right-4 top-7"
              data-ods="button"
              data-testid="drawer-dismiss-button"
              aria-label="Fermer"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >

                <header
                  class="flex items-center min-h-[var(--mrc-drawer-header-height)] pl-6 pr-16"
                >

                  <div
                    class="flex items-center py-6 space-x-2 w-full"
                  >

                    <h2
                      class="_text--heading-2_HASH_19"
                      data-ods="text"
                    >Complete Drawer
                    </h2
                    >
                    </div
                    >
                    </header
                    >

                      <section
                        class="flex-1 outline-none overflow-y-auto px-6"
                      >

                        <h3
                          class="_text--heading-3_HASH_25"
                          data-ods="text"
                        >Drawer with all components
                        </h3
                        >

                          <p
                          >Drawer with all components
                          </p
                          >
                          </section
                          >

                            <footer
                              class="p-6 space-x-2"
                            >

                              <button
                                class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2"
                                data-ods="button"
                                data-testid="manager-button"
                                type="button"
                              >Cancel
                              </button
                              >

                                <button
                                  class="_button--default_HASH_49 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2"
                                  data-ods="button"
                                  data-testid="manager-button"
                                  type="button"
                                >Confirm
                                </button
                                >
                                </footer
                                >
                                </div
                                >
                                </div
                                >
                                </div
                                >
                                </div
                                >

                                  <button
                                    data-testid="drawer-backdrop"
                                    type="button"
                                    aria-label="Fermer"
                                    tabindex="0"
                                    class="bg-[var(--ods-color-information-500)] fixed inset-0 mrc-drawer-backdrop-fade-in z-40"
                                  >
                                  </button
                                  >
                                  </div
                                  >
                                  </div
                                  >
`;

exports[`Drawer Snapshot Tests > Drawer.Root > should render drawer with trigger element 1`] = `
<div
>

  <div
    id="mrc-drawer"
    class="relative"
  >

    <button
      data-scope="dialog"
      data-part="trigger"
      dir="ltr"
      id="dialog::r4::trigger"
      aria-haspopup="dialog"
      type="button"
      aria-expanded="true"
      data-state="open"
      aria-controls="dialog::r4::content"
      data-ods="drawer-trigger"
    >

      <button
      >Open Drawer
      </button
      >
      </button
      >

        <div
          data-scope="dialog"
          data-part="positioner"
          dir="ltr"
          id="dialog::r4::positioner"
        >

          <div
            data-scope="dialog"
            data-part="content"
            dir="ltr"
            role="dialog"
            id="dialog::r4::content"
            tabindex="-1"
            data-state="open"
            aria-modal="true"
            aria-labelledby=""
            aria-describedby=""
            class="_drawer-positioner__content--right_HASH_85 _drawer-positioner__content_HASH_2 max-w-full overflow-hidden p-0 sm:w-[var(--mrc-drawer-width)] w-full"
            data-ods="drawer-content"
            data-testid="drawer"
          >

            <div
              data-ods="drawer-body"
            >

              <div
                class="flex flex-col h-screen justify-between overflow-hidden"
              >

                <button
                  class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 absolute right-4 top-7"
                  data-ods="button"
                  data-testid="drawer-dismiss-button"
                  aria-label="Fermer"
                  type="button"
                >

                  <span
                    class="_icon--xmark_HASH_562 _icon_HASH_2"
                    data-ods="icon"
                    role="presentation"
                  >
                  </span
                  >
                  </button
                  >

                    <header
                      class="flex items-center min-h-[var(--mrc-drawer-header-height)] pl-6 pr-16"
                    >

                      <div
                        class="flex items-center py-6 space-x-2 w-full"
                      >

                        <h2
                          class="_text--heading-2_HASH_19"
                          data-ods="text"
                        >Drawer with Trigger
                        </h2
                        >
                        </div
                        >
                        </header
                        >

                          <section
                            class="flex-1 outline-none overflow-y-auto px-6"
                          >

                            <h3
                              class="_text--heading-3_HASH_25"
                              data-ods="text"
                            >Drawer with trigger button
                            </h3
                            >

                              <p
                              >Drawer with trigger button
                              </p
                              >
                              </section
                              >
                              </div
                              >
                              </div
                              >
                              </div
                              >
                              </div
                              >

                                <button
                                  data-testid="drawer-backdrop"
                                  type="button"
                                  aria-label="Fermer"
                                  tabindex="0"
                                  class="bg-[var(--ods-color-information-500)] fixed inset-0 mrc-drawer-backdrop-fade-in z-40"
                                >
                                </button
                                >
                                </div
                                >
                                </div
                                >
`;

exports[`Drawer Snapshot Tests > Drawer.Root > should render drawer without createPortal 1`] = `
<div
>

  <div
    id="mrc-drawer"
    class="relative"
  >

    <div
      data-scope="dialog"
      data-part="positioner"
      dir="ltr"
      id="dialog::r3::positioner"
    >

      <div
        data-scope="dialog"
        data-part="content"
        dir="ltr"
        role="dialog"
        id="dialog::r3::content"
        tabindex="-1"
        data-state="open"
        aria-modal="true"
        aria-labelledby=""
        aria-describedby=""
        class="_drawer-positioner__content--right_HASH_85 _drawer-positioner__content_HASH_2 max-w-full overflow-hidden p-0 sm:w-[var(--mrc-drawer-width)] w-full"
        data-ods="drawer-content"
        data-testid="drawer"
      >

        <div
          data-ods="drawer-body"
        >

          <div
            class="flex flex-col h-screen justify-between overflow-hidden"
          >

            <button
              class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 absolute right-4 top-7"
              data-ods="button"
              data-testid="drawer-dismiss-button"
              aria-label="Fermer"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >

                <header
                  class="flex items-center min-h-[var(--mrc-drawer-header-height)] pl-6 pr-16"
                >

                  <div
                    class="flex items-center py-6 space-x-2 w-full"
                  >

                    <h2
                      class="_text--heading-2_HASH_19"
                      data-ods="text"
                    >No Portal Drawer
                    </h2
                    >
                    </div
                    >
                    </header
                    >

                      <section
                        class="flex-1 outline-none overflow-y-auto px-6"
                      >

                        <h3
                          class="_text--heading-3_HASH_25"
                          data-ods="text"
                        >Rendered without portal
                        </h3
                        >

                          <p
                          >Rendered without portal
                          </p
                          >
                          </section
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >

                            <button
                              data-testid="drawer-backdrop"
                              type="button"
                              aria-label="Fermer"
                              tabindex="0"
                              class="bg-[var(--ods-color-information-500)] fixed inset-0 mrc-drawer-backdrop-fade-in z-40"
                            >
                            </button
                            >
                            </div
                            >
                            </div
                            >
`;

exports[`Drawer Snapshot Tests > Drawer.RootCollapsible > should render basic collapsible drawer 1`] = `
<div
>

  <div
    id="mrc-drawer"
    class="relative"
  >

    <div
      data-scope="dialog"
      data-part="positioner"
      dir="ltr"
      id="dialog::r6::positioner"
    >

      <div
        data-scope="dialog"
        data-part="content"
        dir="ltr"
        role="dialog"
        id="dialog::r6::content"
        tabindex="-1"
        data-state="open"
        aria-modal="true"
        aria-labelledby=""
        aria-describedby=""
        class="_drawer-positioner__content--right_HASH_85 _drawer-positioner__content_HASH_2 duration-[var(--mrc-drawer-collapse-duration)] ease-in-out max-w-full mrc-drawer-handle-fade-in overflow-hidden p-0 sm:w-[var(--mrc-drawer-width)] transition-all w-full"
        data-ods="drawer-content"
        data-testid="drawer"
      >

        <div
          data-ods="drawer-body"
        >

          <div
            class="flex flex-col h-screen justify-between overflow-hidden"
          >

            <button
              class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 absolute right-4 top-7"
              data-ods="button"
              data-testid="drawer-dismiss-button"
              aria-label="Fermer"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >

                <header
                  class="flex items-center min-h-[var(--mrc-drawer-header-height)] pl-6 pr-16"
                >

                  <div
                    class="flex items-center py-6 space-x-2 w-full"
                  >

                    <h2
                      class="_text--heading-2_HASH_19"
                      data-ods="text"
                    >Collapsible Drawer
                    </h2
                    >
                    </div
                    >
                    </header
                    >

                      <section
                        class="flex-1 outline-none overflow-y-auto px-6"
                      >

                        <h3
                          class="_text--heading-3_HASH_25"
                          data-ods="text"
                        >Collapsible Drawer
                        </h3
                        >

                          <p
                          >This is a collapsible drawer
                          </p
                          >
                          </section
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >

                            <div
                              class="duration-[var(--mrc-drawer-collapse-duration)] ease-in-out fixed mrc-drawer-handle-fade-in right-[var(--mrc-drawer-width)] top-[var(--mrc-drawer-header-height)] transition-all z-[100]"
                            >

                              <div
                                class="bg-white h-[var(--mrc-drawer-handle-size)] hidden items-center justify-center mrc-drawer-handle-shadow right-0 rounded-l-lg sm:flex w-[var(--mrc-drawer-handle-size)]"
                              >

                                <div
                                >

                                  <button
                                    class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2"
                                    data-ods="button"
                                    data-testid="drawer-handle"
                                    aria-label="Replier"
                                    type="button"
                                  >

                                    <span
                                      class="_icon--chevron-double-right_HASH_82 _icon_HASH_2"
                                      data-ods="icon"
                                      role="presentation"
                                    >
                                    </span
                                    >
                                    </button
                                    >
                                    </div
                                    >
                                    </div
                                    >
                                    </div
                                    >
                                    </div
                                    >
                                    </div
                                    >
`;

exports[`Drawer Snapshot Tests > Drawer.RootCollapsible > should render closed collapsible drawer 1`] = `
<div
>

  <div
    id="mrc-drawer"
    class="relative"
  >

    <div
      data-scope="dialog"
      data-part="positioner"
      dir="ltr"
      id="dialog::r8::positioner"
      style="pointer-events: none;"
    >

      <div
        data-scope="dialog"
        data-part="content"
        dir="ltr"
        role="dialog"
        hidden=""
        id="dialog::r8::content"
        tabindex="-1"
        data-state="closed"
        aria-modal="true"
        aria-labelledby=""
        aria-describedby=""
        class="_drawer-positioner__content--right_HASH_85 _drawer-positioner__content_HASH_2 duration-[var(--mrc-drawer-collapse-duration)] ease-in-out max-w-full mrc-drawer-handle-fade-in overflow-hidden p-0 sm:w-[var(--mrc-drawer-width)] transition-all w-full"
        data-ods="drawer-content"
        data-testid="drawer"
      >

        <div
          data-ods="drawer-body"
        >

          <div
            class="flex flex-col h-screen justify-between overflow-hidden"
          >

            <button
              class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 absolute right-4 top-7"
              data-ods="button"
              data-testid="drawer-dismiss-button"
              aria-label="Fermer"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >

                <header
                  class="flex items-center min-h-[var(--mrc-drawer-header-height)] pl-6 pr-16"
                >

                  <div
                    class="flex items-center py-6 space-x-2 w-full"
                  >

                    <h2
                      class="_text--heading-2_HASH_19"
                      data-ods="text"
                    >Closed Collapsible
                    </h2
                    >
                    </div
                    >
                    </header
                    >

                      <section
                        class="flex-1 outline-none overflow-y-auto px-6"
                      >

                        <h3
                          class="_text--heading-3_HASH_25"
                          data-ods="text"
                        >Closed Collapsible Drawer
                        </h3
                        >

                          <p
                          >This collapsible drawer is closed
                          </p
                          >
                          </section
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >
                          </div
                          >
`;

exports[`Drawer Snapshot Tests > Drawer.RootCollapsible > should render collapsible drawer with all components 1`] = `
<div
>

  <div
    id="mrc-drawer"
    class="relative"
  >

    <div
      data-scope="dialog"
      data-part="positioner"
      dir="ltr"
      id="dialog::r7::positioner"
    >

      <div
        data-scope="dialog"
        data-part="content"
        dir="ltr"
        role="dialog"
        id="dialog::r7::content"
        tabindex="-1"
        data-state="open"
        aria-modal="true"
        aria-labelledby=""
        aria-describedby=""
        class="_drawer-positioner__content--right_HASH_85 _drawer-positioner__content_HASH_2 duration-[var(--mrc-drawer-collapse-duration)] ease-in-out max-w-full mrc-drawer-handle-fade-in overflow-hidden p-0 sm:w-[var(--mrc-drawer-width)] transition-all w-full"
        data-ods="drawer-content"
        data-testid="drawer"
      >

        <div
          data-ods="drawer-body"
        >

          <div
            class="flex flex-col h-screen justify-between overflow-hidden"
          >

            <button
              class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 absolute right-4 top-7"
              data-ods="button"
              data-testid="drawer-dismiss-button"
              aria-label="Fermer"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >

                <header
                  class="flex items-center min-h-[var(--mrc-drawer-header-height)] pl-6 pr-16"
                >

                  <div
                    class="flex items-center py-6 space-x-2 w-full"
                  >

                    <h2
                      class="_text--heading-2_HASH_19"
                      data-ods="text"
                    >Full Collapsible Drawer
                    </h2
                    >
                    </div
                    >
                    </header
                    >

                      <section
                        class="flex-1 outline-none overflow-y-auto px-6"
                      >

                        <h3
                          class="_text--heading-3_HASH_25"
                          data-ods="text"
                        >Complete Collapsible Drawer
                        </h3
                        >

                          <p
                          >Complete collapsible drawer
                          </p
                          >
                          </section
                          >

                            <footer
                              class="p-6 space-x-2"
                            >

                              <button
                                class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2"
                                data-ods="button"
                                data-testid="manager-button"
                                type="button"
                              >Reset
                              </button
                              >

                                <button
                                  class="_button--default_HASH_49 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2"
                                  data-ods="button"
                                  data-testid="manager-button"
                                  type="button"
                                >Apply
                                </button
                                >
                                </footer
                                >
                                </div
                                >
                                </div
                                >
                                </div
                                >
                                </div
                                >

                                  <div
                                    class="duration-[var(--mrc-drawer-collapse-duration)] ease-in-out fixed mrc-drawer-handle-fade-in right-[var(--mrc-drawer-width)] top-[var(--mrc-drawer-header-height)] transition-all z-[100]"
                                  >

                                    <div
                                      class="bg-white h-[var(--mrc-drawer-handle-size)] hidden items-center justify-center mrc-drawer-handle-shadow right-0 rounded-l-lg sm:flex w-[var(--mrc-drawer-handle-size)]"
                                    >

                                      <div
                                      >

                                        <button
                                          class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2"
                                          data-ods="button"
                                          data-testid="drawer-handle"
                                          aria-label="Replier"
                                          type="button"
                                        >

                                          <span
                                            class="_icon--chevron-double-right_HASH_82 _icon_HASH_2"
                                            data-ods="icon"
                                            role="presentation"
                                          >
                                          </span
                                          >
                                          </button
                                          >
                                          </div
                                          >
                                          </div
                                          >
                                          </div
                                          >
                                          </div
                                          >
                                          </div
                                          >
`;

exports[`Drawer Snapshot Tests > Drawer.RootCollapsible > should render collapsible drawer with complex content 1`] = `
<div
>

  <div
    id="mrc-drawer"
    class="relative"
  >

    <div
      data-scope="dialog"
      data-part="positioner"
      dir="ltr"
      id="dialog::r9::positioner"
    >

      <div
        data-scope="dialog"
        data-part="content"
        dir="ltr"
        role="dialog"
        id="dialog::r9::content"
        tabindex="-1"
        data-state="open"
        aria-modal="true"
        aria-labelledby=""
        aria-describedby=""
        class="_drawer-positioner__content--right_HASH_85 _drawer-positioner__content_HASH_2 duration-[var(--mrc-drawer-collapse-duration)] ease-in-out max-w-full mrc-drawer-handle-fade-in overflow-hidden p-0 sm:w-[var(--mrc-drawer-width)] transition-all w-full"
        data-ods="drawer-content"
        data-testid="drawer"
      >

        <div
          data-ods="drawer-body"
        >

          <div
            class="flex flex-col h-screen justify-between overflow-hidden"
          >

            <button
              class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 absolute right-4 top-7"
              data-ods="button"
              data-testid="drawer-dismiss-button"
              aria-label="Fermer"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >

                <header
                  class="flex items-center min-h-[var(--mrc-drawer-header-height)] pl-6 pr-16"
                >

                  <div
                    class="flex items-center py-6 space-x-2 w-full"
                  >

                    <h2
                      class="_text--heading-2_HASH_19"
                      data-ods="text"
                    >Complex Collapsible
                    </h2
                    >
                    </div
                    >
                    </header
                    >

                      <section
                        class="flex-1 outline-none overflow-y-auto px-6"
                      >

                        <h3
                          class="_text--heading-3_HASH_25"
                          data-ods="text"
                        >Complex Collapsible Drawer
                        </h3
                        >

                          <form
                          >

                            <label
                              for="setting1"
                            >Setting 1
                            </label
                            >

                              <input
                                id="setting1"
                                type="text"
                                value="value1"
                              >

                              <label
                                for="setting2"
                              >Setting 2
                              </label
                              >

                                <input
                                  id="setting2"
                                  type="checkbox"
                                >
                              </form
                              >
                              </section
                              >

                                <footer
                                  class="p-6 space-x-2"
                                >

                                  <button
                                    class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2"
                                    data-ods="button"
                                    data-testid="manager-button"
                                    type="button"
                                  >Cancel
                                  </button
                                  >

                                    <button
                                      class="_button--default_HASH_49 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2"
                                      data-ods="button"
                                      data-testid="manager-button"
                                      type="button"
                                    >Save Settings
                                    </button
                                    >
                                    </footer
                                    >
                                    </div
                                    >
                                    </div
                                    >
                                    </div
                                    >
                                    </div
                                    >

                                      <div
                                        class="duration-[var(--mrc-drawer-collapse-duration)] ease-in-out fixed mrc-drawer-handle-fade-in right-[var(--mrc-drawer-width)] top-[var(--mrc-drawer-header-height)] transition-all z-[100]"
                                      >

                                        <div
                                          class="bg-white h-[var(--mrc-drawer-handle-size)] hidden items-center justify-center mrc-drawer-handle-shadow right-0 rounded-l-lg sm:flex w-[var(--mrc-drawer-handle-size)]"
                                        >

                                          <div
                                          >

                                            <button
                                              class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2"
                                              data-ods="button"
                                              data-testid="drawer-handle"
                                              aria-label="Replier"
                                              type="button"
                                            >

                                              <span
                                                class="_icon--chevron-double-right_HASH_82 _icon_HASH_2"
                                                data-ods="icon"
                                                role="presentation"
                                              >
                                              </span
                                              >
                                              </button
                                              >
                                              </div
                                              >
                                              </div
                                              >
                                              </div
                                              >
                                              </div
                                              >
                                              </div
                                              >
`;
